syntax = "proto3";

option go_package = "/catalogueservice";

service RestaurantService {
  rpc Create(RestaurantRequest) returns (RestaurantResponse);
  rpc Get(RestaurantIdRequest) returns (RestaurantResponse);
  rpc GetAll(NoParams) returns (RestaurantListResponse);
}

service MenuItemsService {
  rpc CreateMultiple(ItemsListRequest) returns (ItemsListResponse);
  rpc GetByRestaurantId(RestaurantIdRequest) returns (ItemsListResponse);
}

message NoParams {}

message Location {
  float latitude = 1;
  float longitude = 2;
}

message RestaurantRequest {
  string name = 1;
  Location location = 2;
}

message RestaurantResponse {
  int64 id = 1;
  string name = 2;
  Location location = 3;
}

message RestaurantIdRequest {
  int64 id = 1;
}

message RestaurantListResponse {
  repeated RestaurantResponse restaurants = 1;
}

message ItemRequest {
  string name = 1;
  float price = 2;
}

message ItemsListRequest {
  int64 restaurantId = 1;
  repeated ItemRequest items = 2;
}

message ItemResponse {
  int64 id = 1;
  string name = 2;
  float price = 3;
}

message ItemsListResponse {
  repeated ItemResponse items = 1;
}